[package]
name = "trad"
version = "0.1.0"
edition = "2024"
authors = ["Nehuén <github.com/nehu3n>"]
description = "🌎 Extremely-fast offline Rust translation library for 200+ languages. CPU-optimized and fully local."
license = "MIT"
readme = "readme.md"
repository = "https://github.com/nehu3n/trad"
keywords = [
    "translation",
    "nllb",
    "multilingual",
    "ai",
    "nlp",
    "translator",
    "fast",
    "cpu",
    "local",
]

[dependencies]
ct2rs = { version = "0.9.17", default-features = false, features = [
    "dnnl",
    "tokenizers",
] }
hf-hub = { version = "0.4.3", default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
